src/parser/snapshots/texlab__parser__latex__tests__parse@label__label_definition_simple.txt.snap
---
source: src/parser/latex.rs
expression: root
input_file: src/parser/test_data/latex/label/label_definition_simple.txt
---
ROOT@0..11
  PREAMBLE@0..11
    LABEL_DEFINITION@0..11
      COMMAND_NAME@0..6 "\\label"
      CURLY_GROUP_WORD@6..11
        L_CURLY@6..7 "{"
        KEY@7..10
          WORD@7..10 "foo"
        R_CURLY@10..11 "}"

