src/parser/snapshots/texlab__parser__latex__tests__parse@label__label_number.txt.snap
---
source: src/parser/latex.rs
expression: root
input_file: src/parser/test_data/latex/label/label_number.txt
---
ROOT@0..21
  PREAMBLE@0..21
    LABEL_NUMBER@0..21
      COMMAND_NAME@0..9 "\\newlabel"
      CURLY_GROUP_WORD@9..14
        L_CURLY@9..10 "{"
        KEY@10..13
          WORD@10..13 "foo"
        R_CURLY@13..14 "}"
      CURLY_GROUP@14..21
        L_CURLY@14..15 "{"
        CURLY_GROUP@15..20
          L_CURLY@15..16 "{"
          TEXT@16..19
            WORD@16..19 "1.1"
          R_CURLY@19..20 "}"
        R_CURLY@20..21 "}"

