src/parser/snapshots/texlab__parser__latex__tests__parse@label__label_reference_incomplete.txt.snap
---
source: src/parser/latex.rs
expression: root
input_file: src/parser/test_data/latex/label/label_reference_incomplete.txt
---
ROOT@0..47
  PREAMBLE@0..47
    TEXT@0..9
      WORD@0..8 "Equation"
      WHITESPACE@8..9 " "
    LABEL_REFERENCE@9..24
      LABEL_REFERENCE_NAME@9..15 "\\eqref"
      CURLY_GROUP_WORD_LIST@15..24
        L_CURLY@15..16 "{"
        KEY@16..24
          WORD@16..18 "eq"
          WHITESPACE@18..19 " "
          WORD@19..21 "is"
          WHITESPACE@21..22 " "
          WORD@22..23 "a"
          WHITESPACE@23..24 " "
    GENERIC_COMMAND@24..38
      GENERIC_COMMAND_NAME@24..29 "\\emph"
      CURLY_GROUP@29..38
        L_CURLY@29..30 "{"
        TEXT@30..36
          WORD@30..36 "useful"
        R_CURLY@36..37 "}"
        WHITESPACE@37..38 " "
    TEXT@38..47
      WORD@38..47 "identity."

