src/parser/snapshots/texlab__parser__latex__tests__parse@label__label_reference_range_error.txt.snap
---
source: src/parser/latex.rs
expression: root
input_file: src/parser/test_data/latex/label/label_reference_range_error.txt
---
ROOT@0..19
  PREAMBLE@0..19
    LABEL_REFERENCE_RANGE@0..19
      LABEL_REFERENCE_RANGE_NAME@0..10 "\\crefrange"
      CURLY_GROUP_WORD@10..14
        L_CURLY@10..11 "{"
        KEY@11..14
          WORD@11..14 "foo"
        MISSING@14..14 ""
      CURLY_GROUP_WORD@14..19
        L_CURLY@14..15 "{"
        KEY@15..18
          WORD@15..18 "bar"
        R_CURLY@18..19 "}"

