src/parser/snapshots/texlab__parser__latex__tests__parse@label__label_reference_range_simple.txt.snap
---
source: src/parser/latex.rs
expression: root
input_file: src/parser/test_data/latex/label/label_reference_range_simple.txt
---
ROOT@0..20
  PREAMBLE@0..20
    LABEL_REFERENCE_RANGE@0..20
      LABEL_REFERENCE_RANGE_NAME@0..10 "\\crefrange"
      CURLY_GROUP_WORD@10..15
        L_CURLY@10..11 "{"
        KEY@11..14
          WORD@11..14 "foo"
        R_CURLY@14..15 "}"
      CURLY_GROUP_WORD@15..20
        L_CURLY@15..16 "{"
        KEY@16..19
          WORD@16..19 "bar"
        R_CURLY@19..20 "}"

